--- a/core/assets/bundles/bundle_et.properties
+++ b/core/assets/bundles/bundle_et.properties
@@ -1,12 +1,12 @@
-credits.text = Created by [ROYAL]Anuken[] - [SKY]anukendev@gmail.com[]
-credits = Credits
-contributors = Translators and Contributors
-discord = Liitu Mindustry Discordiga!
-link.discord.description = Ametlik Mindustry Discord server
-link.github.description = Game source code
-link.dev-builds.description = Unstable development builds
-link.trello.description = Official Trello board for planned features
-link.itch.io.description = itch.io page with PC downloads and web version
+credits.text = [ROYAL]Anuken[] - [SKY]anukendev@gmail.com[] poolt loodud
+credits = Tegijad ja panustajad
+contributors = Tõlkijad ja panustajad
+discord = Liituge Mindustry Discordi serveriga!
+link.discord.description = Mindustry ametlik Discordi server
+link.github.description = Github mängu koodiga
+link.dev-builds.description = Selle mängu pooleli olevad versioonid
+link.trello.description = Ametlik Trello leht plaanitud funktsioonide listiga
+link.itch.io.description = itch.io leht selle mängu arvuti versioonidega
 link.google-play.description = Google Play store listing
 link.wiki.description = Ametlik Mindustry wiki
 linkfail = Failed to open link!\nThe URL has been copied to your clipboard.
