--- a/core/assets/bundles/bundle_et.properties
+++ b/core/assets/bundles/bundle_et.properties
@@ -1,37 +1,37 @@
-credits.text = Created by [ROYAL]Anuken[] - [SKY]anukendev@gmail.com[]
-credits = Credits
-contributors = Translators and Contributors
-discord = Liitu Mindustry Discordiga!
-link.discord.description = Ametlik Mindustry Discord server
-link.github.description = Game source code
-link.dev-builds.description = Unstable development builds
-link.trello.description = Official Trello board for planned features
-link.itch.io.description = itch.io page with PC downloads and web version
-link.google-play.description = Google Play store listing
+credits.text = [ROYAL]Anuken[] - [SKY]anukendev@gmail.com[] poolt loodud
+credits = Tegijad ja panustajad
+contributors = Tõlkijad ja panustajad
+discord = Liituge Mindustry Discordi serveriga!
+link.discord.description = Mindustry ametlik Discordi server
+link.github.description = Github mängu koodiga
+link.dev-builds.description = Selle mängu pooleli olevad versioonid
+link.trello.description = Ametlik Trello leht plaanitud funktsioonide listiga
+link.itch.io.description = itch.io leht selle mängu arvuti versioonidega
+link.google-play.description = Mindustry Google play's
 link.wiki.description = Ametlik Mindustry wiki
-linkfail = Failed to open link!\nThe URL has been copied to your clipboard.
-screenshot = Screenshot saved to {0}
-screenshot.invalid = Map too large, potentially not enough memory for screenshot.
+linkfail = Linki eba õnnestsus avada!\nAadress kopeeriti 
+screenshot = Kuvatõmme salvestati {0}
+screenshot.invalid = Maastik liiga suur, tõenäoliselt pole piisavalt mälu salvestamiseks
 gameover = Mäng Läbi
 gameover.pvp = [accent] {0}[] tiim võitis!
 highscore = [accent]Uus rekord!
 
-stat.wave = Waves Defeated:[accent] {0}
-stat.enemiesDestroyed = Enemies Destroyed:[accent] {0}
-stat.built = Buildings Built:[accent] {0}
-stat.destroyed = Buildings Destroyed:[accent] {0}
-stat.deconstructed = Buildings Deconstructed:[accent] {0}
-stat.delivered = Resources Launched:
-stat.rank = Final Rank: [accent]{0}
+stat.wave = Voorusid läbitud:[accent] {0}
+stat.enemiesDestroyed = Vaenlasi hävitatud:[accent] {0}
+stat.built = Ehitusi ehitatud:[accent] {0}
+stat.destroyed = Ehitusi hävitatud:[accent] {0}
+stat.deconstructed = Ehitusi ise hävitatud:[accent] {0}
+stat.delivered = Materiaal kaasa võetud:
+stat.rank = Hinne: [accent]{0}
 
-placeline = You have selected a block.\nYou can[accent] place in a line[] by[accent] holding down your finger for a few seconds[] and dragging in a direction.\n\n[scarlet]DO IT.
-removearea = You have selected removal mode.\nYou can[accent] remove blocks in a rectangle[] by[accent] holding down your finger for a few seconds[] and dragging.\n\n[scarlet]DO IT.
+placeline = Sa valisid eitise\nSa saad[accent] panna neid sirges reas[] hoides näpuga all ja, siis viibates mõness suunas.\n\n[scarlet]TEE SEDAoof caps.
+removearea = Sa valisid hävitamis funktsiooni.\nsa saad[accent] hävitada[]hoides oma sõrme all mõne sekundi ja, siis viibates mõnele poole.\n\n[scarlet]TEE SEDA miks ma kogu aeg capsi vajutan
 
-launcheditems = [accent]Launched Items
-map.delete = Kas oled kindel, et soovid kustutada "[accent]{0}[]"?
+launcheditems = [accent]kaasa võetud materialid
+map.delete = Kas oled kindel, et soovid kustutada "[accent]{0}[]", Dave?
 level.highscore = Rekord: [accent]{0}
-level.select = Level Select
-level.mode = Gamemode:
+level.select = Taseme valik
+level.mode = Mänguviisi valik valik:
 showagain = Don't show again next session
 coreattack = < Core is under attack! >
 nearpoint = [[ [scarlet]LEAVE DROP POINT IMMEDIATELY[] ]\nannihilation imminent
